@@ -3,6 +3,11 @@
 
 
 
+#include <string>
+#include <map>
+using namespace std;
+
+
 class Object;
 class CK2Title;
 class CK2Province;
@@ -14,9 +19,14 @@ class CK2Barony
 
 		CK2Title*		getTitle()		const { return title; };
 		CK2Province*	getProvince()	const { return province; };
+
+		float				getPopProxy() const;
 	private:
 		CK2Title*		title;
 		CK2Province*	province;
+
+		string				type;
+		map<string, bool>	buildings;
 };
 
 
