@@ -152,3 +152,4 @@ Revision	Log Message
 149		Heresy modifier for heretic religions (only if ruler's religion different)
 150		Simplify the heretic modifier
 151		Update 'religion' culture distinguisher rules to include heretics
+152		Population conversion
